
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.workflow.ulid.grpc";
option java_outer_classname = "UlidServiceProto";

package ulid;

// ULID service definition
service UlidService {
  // Generates a standard ULID
  rpc GenerateUlid (UlidRequest) returns (UlidResponse) {}

  // Generates a monotonic ULID
  rpc GenerateMonotonicUlid (UlidRequest) returns (UlidResponse) {}

  // Reserves a batch of ULIDs for client-side generation
  rpc ReserveBatch (BatchRequest) returns (BatchResponse) {}
}

// Request for ULID generation
message UlidRequest {
  // Optional client identifier (can be used for logging or rate limiting)
  string client_id = 1;
}

// Response containing a generated ULID
message UlidResponse {
  // The generated ULID
  string ulid = 1;

  // Timestamp of when the ULID was generated
  int64 timestamp = 2;
}

// Request for batch reservation
message BatchRequest {
  // Client identifier
  string client_id = 1;

  // Number of ULIDs to reserve
  int32 batch_size = 2;
}

// Response for batch reservation
message BatchResponse {
  // Client node ID assigned by the server (0-1023)
  int32 node_id = 1;

  // Reserved timestamp range start (in milliseconds)
  int64 timestamp_start = 2;

  // Reserved timestamp range end (in milliseconds)
  int64 timestamp_end = 3;

  // Time to wait before requesting another batch (in milliseconds)
  int64 wait_time_ms = 4;
}